# subagent-fleet

./: .gitignore  AGENTS.md  EVALS.md  README.md  ROADMAP_PROPOSAL.md  SPEC.md  implement_gen3_roadmap.py  implement_gen3_roadmap_fix.py  implement_gen4_roadmap.py  implement_gen4_roadmap_fix.py  implement_gen4_roadmap_fix2.py  implement_gen4_roadmap_fix3.py  implement_new_roadmap.py  index.html  mkdocs.yml  pyproject.toml  wol_hook.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: docs.yml
.playwright-mcp/: page-2026-06-29T07-12-34-585Z.yml  page-2026-06-29T07-50-02-877Z.yml
LICENSE/: index.html
docs/: LICENSE.md  index.md  spec.md
evals/: frontier-comparison-2026-06-30.json
examples/: README.md  demo-fleet.yaml  fleet.yaml  litellm_config.generated.yaml
examples/claude-agents/: implementer.md  planner.md  reviewer.md
examples/litellm-proxy/: litellm_config.yaml
examples/multi-node-cluster/: fleet.yaml
examples/ollama-laptop-only/: fleet.yaml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
search/: search_index.json
site/: 404.html  index.html
site/roadmap/: index.html
site/search/: search_index.json
site/spec/: index.html
src/subagent_fleet/: cli.py  (+8 more)
test_aider_output/: litellm_config.yaml
test_output/: litellm_config.yaml
tests/: test_cli.py  test_config.py  test_discovery.py  test_generate_aider.py  test_generate_claude_agents.py  test_generate_litellm.py  test_observability.py  test_plugins.py  test_trace_cmd.py  test_ui_events.py  test_ui_server.py  test_warmup.py
(+49 files in other folders)
