[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subagent-fleet"
version = "0.2.0"
description = "Local AI compute control plane for Claude Code and coding agents. Route subagents across your Macs, GPUs, and Ollama nodes — with real-time fleet health, role-based routing, model warmup, and execution tracing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Aditya Karnam" }]
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
]

[project.scripts]
subagent-fleet = "subagent_fleet.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/subagent_fleet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
